Task 2 debug